--- a/shop/templates/shop/base.html
+++ b/shop/templates/shop/base.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="image/x-icon" href="../../static/images/icons8-shop-60.png" rel="shortcut icon">
+    <link type="image/x-icon" href="{% static 'shop/images/icons8-shop-60.png' %}" rel="shortcut icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&family=Lato&display=swap"
           rel="stylesheet">
-    <link rel="stylesheet" href="../../static/css/reset.css">
-    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="{% static 'shop/css/reset.css' %}">
+    <link rel="stylesheet" href="{% static 'shop/css/style.css' %}">
     <title>{% block title %}Base{% endblock %}</title>
 </head>
 
 <body>
-
+{% load static %}
 <!-- Header-page -->
 {% block header %}
     {% include 'shop/include/header.html' %}
