--- a/shop/templates/shop/home/home.html
+++ b/shop/templates/shop/home/home.html
@@ -19,7 +19,7 @@
                             in phasellus non in justo.
                         </p>
                         <a href="#" class="main__slider-link">Shop Now</a>
-                        <img src="../../../static/images/sofa.png" alt="" class="main__slider-sofa">
+                        <img src="../../../static/shop/images/sofa.png" alt="" class="main__slider-sofa">
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                 </div>
                 <div class="offer__items">
                     <div class="offer__item">
-                        <img src="../../../static/images/free-delivery 1.svg" alt="" class="offer__item-img">
+                        <img src="../../../static/shop/images/free-delivery 1.svg" alt="" class="offer__item-img">
                         <h4 class="offer__item-title">
                             24/7 Support
                         </h4>
@@ -126,7 +126,7 @@
                     </div>
 
                     <div class="offer__item">
-                        <img src="../../../static/images/cashback 1.svg" alt="" class="offer__item-img">
+                        <img src="../../../static/shop/images/cashback 1.svg" alt="" class="offer__item-img">
                         <h4 class="offer__item-title">
                             24/7 Support
                         </h4>
@@ -136,7 +136,7 @@
                     </div>
 
                     <div class="offer__item">
-                        <img src="../../../static/images/premium-quality 1.svg" alt="" class="offer__item-img">
+                        <img src="../../../static/shop/images/premium-quality 1.svg" alt="" class="offer__item-img">
                         <h4 class="offer__item-title">
                             24/7 Support
                         </h4>
@@ -146,7 +146,7 @@
                     </div>
 
                     <div class="offer__item">
-                        <img src="../../../static/images/24-hours-support 1.svg" alt="" class="offer__item-img">
+                        <img src="../../../static/shop/images/24-hours-support 1.svg" alt="" class="offer__item-img">
                         <h4 class="offer__item-title">
                             24/7 Support
                         </h4>
@@ -164,7 +164,7 @@
             <div class="trending-products__inner">
                 <div class="container">
                     <div class="trending-products__item">
-                        <img src="../../../static/images/sofa2.png" alt="" class="trending-products__img">
+                        <img src="../../../static/shop/images/sofa2.png" alt="" class="trending-products__img">
                         <div class="trending-products__item-text">
                             <h3 class="trending-products__title">
                                 Unique Features Of leatest &
@@ -206,7 +206,7 @@
                 <div class="sale__items">
                     <div class="sale__item">
                         <div class="container-img">
-                            <img src="../../../static/images/chair 10.png" alt="" class="sale__item-img">
+                            <img src="../../../static/shop/images/chair 10.png" alt="" class="sale__item-img">
                         </div>
                         <h4 class="sale__item-title">
                             Cantilever chair
@@ -220,7 +220,7 @@
                     </div>
                     <div class="sale__item">
                         <div class="container-img">
-                            <img src="../../../static/images/chair 12.png" alt="" class="sale__item-img">
+                            <img src="../../../static/shop/images/chair 12.png" alt="" class="sale__item-img">
                         </div>
                         <h4 class="sale__item-title">
                             Cantilever chair
@@ -234,7 +234,7 @@
                     </div>
                     <div class="sale__item">
                         <div class="container-img">
-                            <img src="../../../static/images/chair 11.png" alt="" class="sale__item-img">
+                            <img src="../../../static/shop/images/chair 11.png" alt="" class="sale__item-img">
                         </div>
                         <h4 class="sale__item-title">
                             Cantilever chair
@@ -248,7 +248,7 @@
                     </div>
                     <div class="sale__item">
                         <div class="container-img">
-                            <img src="../../../static/images/chair 7.png" alt="" class="sale__item-img">
+                            <img src="../../../static/shop/images/chair 7.png" alt="" class="sale__item-img">
                         </div>
                         <h4 class="sale__item-title">
                             Cantilever chair
@@ -269,7 +269,7 @@
                         </h4>
                         <a href="#" class="sale__item-link-big">Shop Now</a>
                         <div class="container-img-big">
-                            <img src="../../../static/images/clock.png" alt="" class="sale__item-img-big">
+                            <img src="../../../static/shop/images/clock.png" alt="" class="sale__item-img-big">
                         </div>
                     </div>
                     <div class="sale__item-big cllection">
@@ -278,7 +278,7 @@
                         </h4>
                         <a href="#" class="sale__item-link-big">View Collection</a>
                         <div class="container-img-big">
-                            <img src="../../../static/images/closet.png" alt="" class="sale__item-img-big">
+                            <img src="../../../static/shop/images/closet.png" alt="" class="sale__item-img-big">
                         </div>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
         <!-- Cooperation -->
 
         <section class="cooperation">
-            <img src="../../../static/images/company.jpg" alt="" class="cooperation-img">
+            <img src="../../../static/shop/images/company.jpg" alt="" class="cooperation-img">
         </section>
 
         <section class="blog">
@@ -311,7 +311,7 @@
                 </h2>
                 <div class="blog__items">
                     <div class="blog__item">
-                        <img src="../../../static/images/iner1.jpg" alt="" class="blog__item-img">
+                        <img src="../../../static/shop/images/iner1.jpg" alt="" class="blog__item-img">
                         <div class="blog__item-author">
                             SaberAli
                         </div>
@@ -330,7 +330,7 @@
                         </a>
                     </div>
                     <div class="blog__item">
-                        <img src="../../../static/images/iner2.jpg" alt="" class="blog__item-img">
+                        <img src="../../../static/shop/images/iner2.jpg" alt="" class="blog__item-img">
                         <div class="blog__item-author">
                             SaberAli
                         </div>
@@ -349,7 +349,7 @@
                         </a>
                     </div>
                     <div class="blog__item">
-                        <img src="../../../static/images/iner3.jpg" alt="" class="blog__item-img">
+                        <img src="../../../static/shop/images/iner3.jpg" alt="" class="blog__item-img">
                         <div class="blog__item-author">
                             SaberAli
                         </div>
