--- a/shop/static/shop/css/style.css
+++ b/shop/static/shop/css/style.css
@@ -1058,6 +1058,139 @@ a {
     color: #FB2E86;
 }
 
+/*Product Detail*/
+
+.product__detail-inner {
+    box-shadow: 0 0 25px 10px #F6F4FD;
+    border-radius: 2px;
+    padding: 10px 13px;
+    display: flex;
+    margin: 80px 0 130px;
+}
+
+.product__detail-img {
+    margin-left: 185px;
+    margin-right: 41px;
+    min-width: 375px;
+    max-height: 487px;
+}
+
+.product__title {
+    font-size: 36px;
+    line-height: 42px;
+    color: #0D134E;
+    margin-top: 64px;
+    margin-bottom: 13px;
+}
+
+.detail, .product-color {
+    margin-bottom: 12px;
+}
+
+.product-description {
+    color: #A9ACC6;
+    line-height: 29px;
+    max-width: 500px;
+    margin-bottom: 34px;
+}
+
+.product-add-to-cart {
+    margin-left: 70px;
+    line-height: 29px;
+    text-transform: capitalize;
+    color: #fff;
+    background-color: #FB2E86;
+    padding: 8px 20px;
+    border-radius: 2px;
+    display: inline-block;
+    margin-bottom: 17px;
+}
+
+.product-add-to-cart:hover {
+    background-color: #c92b6f;
+}
+
+.product-category,
+.product-tags {
+    margin-bottom: 10px;
+}
+
+.product-share {
+    padding-bottom: 59px;
+}
+
+/*Cart*/
+
+.cart {
+    width: 100%;
+}
+
+.cart__inner {
+    display: flex;
+}
+
+.cart__product-img {
+    display: flex;
+    align-items: center;
+}
+
+th {
+    padding: 24px 0;
+}
+
+.cart_total {
+    background: #F4F4FC;
+    border-radius: 3px;
+    width: 371px;
+    height: 284px;
+}
+
+td {
+    text-align: center;
+    vertical-align: middle;
+}
+
+.cart__title {
+    color: #1D3178;
+    font-size: 20px;
+    line-height: 23px;
+    margin-bottom: 48px;
+}
+
+.total {
+    padding: 30px 0;
+}
+
+.first {
+    text-align: left;
+}
+
+.cart__img {
+    border-radius: 3px;
+    max-width: 83px;
+    max-height: 87px;
+    margin-right: 15px;
+}
+
+.cart__product {
+    display: flex;
+    align-items: center;
+}
+
+.cart__product-title {
+    white-space: break-spaces;
+    max-width: 280px;
+}
+
+.button {
+    display: inline-block;
+    color: #fff;
+    padding: 11px 20px;
+    background-color: #FB2E86;
+    border-radius: 2px;
+    margin-bottom: 80px;
+}
+
 /* 404 */
 
 .main__inner-404 {
