--- a/shop/templates/shop/include/header.html
+++ b/shop/templates/shop/include/header.html
@@ -17,7 +17,7 @@
 
                     <a href="#" class="header__wishlist">Wishlist</a>
 
-                    <a href="#" class="header__cart"></a>
+                    <a href="{% url 'cart_detail' %}" class="header__cart"></a>
                 </div>
             </div>
         </div>
